parser/v1/generated/PineV1Parser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PineV1ParserVisitor } from "./PineV1ParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PineV1Parser extends antlr.Parser {
    public static readonly BEGIN = 1;
    public static readonly END = 2;
    public static readonly LEND = 3;
    public static readonly LBEG = 4;
    public static readonly IF_COND = 5;
    public static readonly IF_COND_ELSE = 6;
    public static readonly FOR_STMT = 7;
    public static readonly FOR_STMT_TO = 8;
    public static readonly FOR_STMT_BY = 9;
    public static readonly BREAK = 10;
    public static readonly CONTINUE = 11;
    public static readonly OR = 12;
    public static readonly AND = 13;
    public static readonly NOT = 14;
    public static readonly BOOL_LITERAL = 15;
    public static readonly COND = 16;
    public static readonly COND_ELSE = 17;
    public static readonly EQ = 18;
    public static readonly NEQ = 19;
    public static readonly GT = 20;
    public static readonly GE = 21;
    public static readonly LT = 22;
    public static readonly LE = 23;
    public static readonly PLUS = 24;
    public static readonly MINUS = 25;
    public static readonly MUL = 26;
    public static readonly DIV = 27;
    public static readonly MOD = 28;
    public static readonly DEFINE = 29;
    public static readonly ARROW = 30;
    public static readonly COMMA = 31;
    public static readonly LPAR = 32;
    public static readonly RPAR = 33;
    public static readonly LSQBR = 34;
    public static readonly RSQBR = 35;
    public static readonly INT_LITERAL = 36;
    public static readonly FLOAT_LITERAL = 37;
    public static readonly STR_LITERAL = 38;
    public static readonly COLOR_LITERAL = 39;
    public static readonly ID = 40;
    public static readonly WS = 41;
    public static readonly LINE_COMMENT = 42;
    public static readonly BLOCK_COMMENT = 43;
    public static readonly DOT = 44;
    public static readonly RULE_pine_script = 0;
    public static readonly RULE_stmt = 1;
    public static readonly RULE_global_stmt = 2;
    public static readonly RULE_global_stmt_content = 3;
    public static readonly RULE_fun_def_stmt = 4;
    public static readonly RULE_fun_def_singleline = 5;
    public static readonly RULE_fun_def_multiline = 6;
    public static readonly RULE_fun_head = 7;
    public static readonly RULE_fun_body_singleline = 8;
    public static readonly RULE_local_stmt_singleline = 9;
    public static readonly RULE_local_stmt_content = 10;
    public static readonly RULE_loop_break = 11;
    public static readonly RULE_loop_continue = 12;
    public static readonly RULE_fun_body_multiline = 13;
    public static readonly RULE_local_stmts_multiline = 14;
    public static readonly RULE_local_stmts_list = 15;
    public static readonly RULE_local_stmt_multiline = 16;
    public static readonly RULE_var_def = 17;
    public static readonly RULE_var_defs = 18;
    public static readonly RULE_ids_array = 19;
    public static readonly RULE_arith_exprs = 20;
    public static readonly RULE_arith_expr = 21;
    public static readonly RULE_if_expr = 22;
    public static readonly RULE_for_expr = 23;
    public static readonly RULE_stmts_block = 24;
    public static readonly RULE_ternary_expr = 25;
    public static readonly RULE_or_expr = 26;
    public static readonly RULE_and_expr = 27;
    public static readonly RULE_eq_expr = 28;
    public static readonly RULE_cmp_expr = 29;
    public static readonly RULE_add_expr = 30;
    public static readonly RULE_mult_expr = 31;
    public static readonly RULE_unary_expr = 32;
    public static readonly RULE_sqbr_expr = 33;
    public static readonly RULE_atom = 34;
    public static readonly RULE_fun_call = 35;
    public static readonly RULE_fun_actual_args = 36;
    public static readonly RULE_pos_args = 37;
    public static readonly RULE_kw_args = 38;
    public static readonly RULE_kw_arg = 39;
    public static readonly RULE_literal = 40;
    public static readonly RULE_num_literal = 41;
    public static readonly RULE_other_literal = 42;
    public static readonly RULE_id = 43;

    public static readonly literalNames = [
        null, null, null, null, null, "'if'", "'else'", "'for'", "'to'", 
        "'by'", "'break'", "'continue'", "'or'", "'and'", "'not'", null, 
        "'?'", "':'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'+'", 
        "'-'", "'*'", "'/'", "'%'", "'='", "'=>'", "','", "'('", "')'", 
        "'['", "']'", null, null, null, null, null, null, null, null, "'.'"
    ];

    public static readonly symbolicNames = [
        null, "BEGIN", "END", "LEND", "LBEG", "IF_COND", "IF_COND_ELSE", 
        "FOR_STMT", "FOR_STMT_TO", "FOR_STMT_BY", "BREAK", "CONTINUE", "OR", 
        "AND", "NOT", "BOOL_LITERAL", "COND", "COND_ELSE", "EQ", "NEQ", 
        "GT", "GE", "LT", "LE", "PLUS", "MINUS", "MUL", "DIV", "MOD", "DEFINE", 
        "ARROW", "COMMA", "LPAR", "RPAR", "LSQBR", "RSQBR", "INT_LITERAL", 
        "FLOAT_LITERAL", "STR_LITERAL", "COLOR_LITERAL", "ID", "WS", "LINE_COMMENT", 
        "BLOCK_COMMENT", "DOT"
    ];
    public static readonly ruleNames = [
        "pine_script", "stmt", "global_stmt", "global_stmt_content", "fun_def_stmt", 
        "fun_def_singleline", "fun_def_multiline", "fun_head", "fun_body_singleline", 
        "local_stmt_singleline", "local_stmt_content", "loop_break", "loop_continue", 
        "fun_body_multiline", "local_stmts_multiline", "local_stmts_list", 
        "local_stmt_multiline", "var_def", "var_defs", "ids_array", "arith_exprs", 
        "arith_expr", "if_expr", "for_expr", "stmts_block", "ternary_expr", 
        "or_expr", "and_expr", "eq_expr", "cmp_expr", "add_expr", "mult_expr", 
        "unary_expr", "sqbr_expr", "atom", "fun_call", "fun_actual_args", 
        "pos_args", "kw_args", "kw_arg", "literal", "num_literal", "other_literal", 
        "id",
    ];

    public get grammarFileName(): string { return "PineV1Parser.g4"; }
    public get literalNames(): (string | null)[] { return PineV1Parser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PineV1Parser.symbolicNames; }
    public get ruleNames(): string[] { return PineV1Parser.ruleNames; }
    public get serializedATN(): number[] { return PineV1Parser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PineV1Parser._ATN, PineV1Parser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public pine_script(): Pine_scriptContext {
        let localContext = new Pine_scriptContext(this.context, this.state);
        this.enterRule(localContext, 0, PineV1Parser.RULE_pine_script);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 92;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 50384040) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 501) !== 0)) {
                {
                this.state = 90;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case PineV1Parser.IF_COND:
                case PineV1Parser.FOR_STMT:
                case PineV1Parser.BREAK:
                case PineV1Parser.CONTINUE:
                case PineV1Parser.NOT:
                case PineV1Parser.BOOL_LITERAL:
                case PineV1Parser.PLUS:
                case PineV1Parser.MINUS:
                case PineV1Parser.LPAR:
                case PineV1Parser.LSQBR:
                case PineV1Parser.INT_LITERAL:
                case PineV1Parser.FLOAT_LITERAL:
                case PineV1Parser.STR_LITERAL:
                case PineV1Parser.COLOR_LITERAL:
                case PineV1Parser.ID:
                    {
                    this.state = 88;
                    this.stmt();
                    }
                    break;
                case PineV1Parser.LEND:
                    {
                    this.state = 89;
                    this.match(PineV1Parser.LEND);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 94;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 95;
            this.match(PineV1Parser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public stmt(): StmtContext {
        let localContext = new StmtContext(this.context, this.state);
        this.enterRule(localContext, 2, PineV1Parser.RULE_stmt);
        try {
            this.state = 99;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 97;
                this.fun_def_stmt();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 98;
                this.global_stmt();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public global_stmt(): Global_stmtContext {
        let localContext = new Global_stmtContext(this.context, this.state);
        this.enterRule(localContext, 4, PineV1Parser.RULE_global_stmt);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 101;
            this.global_stmt_content();
            this.state = 106;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 102;
                this.match(PineV1Parser.COMMA);
                this.state = 103;
                this.global_stmt_content();
                }
                }
                this.state = 108;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public global_stmt_content(): Global_stmt_contentContext {
        let localContext = new Global_stmt_contentContext(this.context, this.state);
        this.enterRule(localContext, 6, PineV1Parser.RULE_global_stmt_content);
        try {
            this.state = 117;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 109;
                this.var_def();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 110;
                this.var_defs();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 111;
                this.fun_call();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 112;
                this.if_expr();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 113;
                this.for_expr();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 114;
                this.loop_break();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 115;
                this.loop_continue();
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 116;
                this.arith_expr();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_def_stmt(): Fun_def_stmtContext {
        let localContext = new Fun_def_stmtContext(this.context, this.state);
        this.enterRule(localContext, 8, PineV1Parser.RULE_fun_def_stmt);
        try {
            this.state = 121;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 119;
                this.fun_def_singleline();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 120;
                this.fun_def_multiline();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_def_singleline(): Fun_def_singlelineContext {
        let localContext = new Fun_def_singlelineContext(this.context, this.state);
        this.enterRule(localContext, 10, PineV1Parser.RULE_fun_def_singleline);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 123;
            this.id();
            this.state = 124;
            this.fun_head();
            this.state = 125;
            this.match(PineV1Parser.ARROW);
            this.state = 126;
            this.fun_body_singleline();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_def_multiline(): Fun_def_multilineContext {
        let localContext = new Fun_def_multilineContext(this.context, this.state);
        this.enterRule(localContext, 12, PineV1Parser.RULE_fun_def_multiline);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 128;
            this.id();
            this.state = 129;
            this.fun_head();
            this.state = 130;
            this.match(PineV1Parser.ARROW);
            this.state = 131;
            this.fun_body_multiline();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_head(): Fun_headContext {
        let localContext = new Fun_headContext(this.context, this.state);
        this.enterRule(localContext, 14, PineV1Parser.RULE_fun_head);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 133;
            this.match(PineV1Parser.LPAR);
            this.state = 142;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 40) {
                {
                this.state = 134;
                this.id();
                this.state = 139;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 31) {
                    {
                    {
                    this.state = 135;
                    this.match(PineV1Parser.COMMA);
                    this.state = 136;
                    this.id();
                    }
                    }
                    this.state = 141;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }

            this.state = 144;
            this.match(PineV1Parser.RPAR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_body_singleline(): Fun_body_singlelineContext {
        let localContext = new Fun_body_singlelineContext(this.context, this.state);
        this.enterRule(localContext, 16, PineV1Parser.RULE_fun_body_singleline);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 146;
            this.local_stmt_singleline();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public local_stmt_singleline(): Local_stmt_singlelineContext {
        let localContext = new Local_stmt_singlelineContext(this.context, this.state);
        this.enterRule(localContext, 18, PineV1Parser.RULE_local_stmt_singleline);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 148;
            this.local_stmt_content();
            this.state = 153;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 149;
                this.match(PineV1Parser.COMMA);
                this.state = 150;
                this.local_stmt_content();
                }
                }
                this.state = 155;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public local_stmt_content(): Local_stmt_contentContext {
        let localContext = new Local_stmt_contentContext(this.context, this.state);
        this.enterRule(localContext, 20, PineV1Parser.RULE_local_stmt_content);
        try {
            this.state = 162;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 156;
                this.var_def();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 157;
                this.var_defs();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 158;
                this.arith_expr();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 159;
                this.arith_exprs();
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 160;
                this.loop_break();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 161;
                this.loop_continue();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loop_break(): Loop_breakContext {
        let localContext = new Loop_breakContext(this.context, this.state);
        this.enterRule(localContext, 22, PineV1Parser.RULE_loop_break);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 164;
            this.match(PineV1Parser.BREAK);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public loop_continue(): Loop_continueContext {
        let localContext = new Loop_continueContext(this.context, this.state);
        this.enterRule(localContext, 24, PineV1Parser.RULE_loop_continue);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 166;
            this.match(PineV1Parser.CONTINUE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fun_body_multiline(): Fun_body_multilineContext {
        let localContext = new Fun_body_multilineContext(this.context, this.state);
        this.enterRule(localContext, 26, PineV1Parser.RULE_fun_body_multiline);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.local_stmts_multiline();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public local_stmts_multiline(): Local_stmts_multilineContext {
        let localContext = new Local_stmts_multilineContext(this.context, this.state);
        this.enterRule(localContext, 28, PineV1Parser.RULE_local_stmts_multiline);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(PineV1Parser.BEGIN);
            this.state = 171;
            this.local_stmts_list();
            this.state = 172;
            this.match(PineV1Parser.END);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public local_stmts_list(): Local_stmts_listContext {
        let localContext = new Local_stmts_listContext(this.context, this.state);
        this.enterRule(localContext, 30, PineV1Parser.RULE_local_stmts_list);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 176;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                this.state = 176;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case PineV1Parser.IF_COND:
                case PineV1Parser.FOR_STMT:
                case PineV1Parser.BREAK:
                case PineV1Parser.CONTINUE:
                case PineV1Parser.NOT:
                case PineV1Parser.BOOL_LITERAL:
                case PineV1Parser.PLUS:
                case PineV1Parser.MINUS:
                case PineV1Parser.LPAR:
                case PineV1Parser.LSQBR:
                case PineV1Parser.INT_LITERAL:
                case PineV1Parser.FLOAT_LITERAL:
                case PineV1Parser.STR_LITERAL:
                case PineV1Parser.COLOR_LITERAL:
                case PineV1Parser.ID:
                    {
                    this.state = 174;
                    this.local_stmt_multiline();
                    }
                    break;
                case PineV1Parser.LEND:
                    {
                    this.state = 175;
                    this.match(PineV1Parser.LEND);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 178;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 50384040) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 501) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public local_stmt_multiline(): Local_stmt_multilineContext {
        let localContext = new Local_stmt_multilineContext(this.context, this.state);
        this.enterRule(localContext, 32, PineV1Parser.RULE_local_stmt_multiline);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 180;
            this.local_stmt_content();
            this.state = 185;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 181;
                this.match(PineV1Parser.COMMA);
                this.state = 182;
                this.local_stmt_content();
                }
                }
                this.state = 187;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public var_def(): Var_defContext {
        let localContext = new Var_defContext(this.context, this.state);
        this.enterRule(localContext, 34, PineV1Parser.RULE_var_def);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.id();
            this.state = 189;
            this.match(PineV1Parser.DEFINE);
            this.state = 190;
            this.arith_expr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public var_defs(): Var_defsContext {
        let localContext = new Var_defsContext(this.context, this.state);
        this.enterRule(localContext, 36, PineV1Parser.RULE_var_defs);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.ids_array();
            this.state = 193;
            this.match(PineV1Parser.DEFINE);
            this.state = 194;
            this.arith_expr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ids_array(): Ids_arrayContext {
        let localContext = new Ids_arrayContext(this.context, this.state);
        this.enterRule(localContext, 38, PineV1Parser.RULE_ids_array);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.match(PineV1Parser.LSQBR);
            this.state = 197;
            this.id();
            this.state = 202;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 198;
                this.match(PineV1Parser.COMMA);
                this.state = 199;
                this.id();
                }
                }
                this.state = 204;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 205;
            this.match(PineV1Parser.RSQBR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arith_exprs(): Arith_exprsContext {
        let localContext = new Arith_exprsContext(this.context, this.state);
        this.enterRule(localContext, 40, PineV1Parser.RULE_arith_exprs);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 207;
            this.match(PineV1Parser.LSQBR);
            this.state = 208;
            this.arith_expr();
            this.state = 213;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 31) {
                {
                {
                this.state = 209;
                this.match(PineV1Parser.COMMA);
                this.state = 210;
                this.arith_expr();
                }
                }
                this.state = 215;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 216;
            this.match(PineV1Parser.RSQBR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public arith_expr(): Arith_exprContext {
        let localContext = new Arith_exprContext(this.context, this.state);
        this.enterRule(localContext, 42, PineV1Parser.RULE_arith_expr);
        try {
            this.state = 221;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PineV1Parser.NOT:
            case PineV1Parser.BOOL_LITERAL:
            case PineV1Parser.PLUS:
            case PineV1Parser.MINUS:
            case PineV1Parser.LPAR:
            case PineV1Parser.INT_LITERAL:
            case PineV1Parser.FLOAT_LITERAL:
            case PineV1Parser.STR_LITERAL:
            case PineV1Parser.COLOR_LITERAL:
            case PineV1Parser.ID:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 218;
                this.ternary_expr();
                }
                break;
            case PineV1Parser.IF_COND:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 219;
                this.if_expr();
                }
                break;
            case PineV1Parser.FOR_STMT:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 220;
                this.for_expr();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public if_expr(): If_exprContext {
        let localContext = new If_exprContext(this.context, this.state);
        this.enterRule(localContext, 44, PineV1Parser.RULE_if_expr);
